question align correctly

--- a/src/views/Question/Description/Description.css
+++ b/src/views/Question/Description/Description.css
@@ -1,10 +1,19 @@
 .questionDescription{
     background-color: var(--white);
     width: 100%;
+    padding: var(--regPadding);
+    box-sizing: border-box;
 }
+
 
 .questionDescription__title{
     color: var(--black);
-    font-size: var(-size15);
-    padding: var(--regPadding);
+    font-size: var(--size15);
+    margin-bottom: var(--regPadding);
+}
+
+.questionDescription__text{
+    color: var(--gray1);
+    font-size: var(-size13);
+    margin-bottom: var(--regPadding);
 }
